--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,7 @@ table {
             line-clamp:2;
             -webkit-line-clamp: 2;
             margin-bottom: 16px;
+			line-height: 1.5;
         }
         .info .button{
             display: inline-block;
